--- a/backend/src/main/resources/public/ssetest.html
+++ b/backend/src/main/resources/public/ssetest.html
@@ -10,7 +10,7 @@
 
 <label for="text">输入发送消息</label><input id="text" type="text" />
 <button onclick="sendToServer()">发送服务器消息</button>
-<button onclick="closeWebSocket()">关闭连接</button>
+<!--<button onclick="closeWebSocket()">关闭连接</button>-->
 
 <br>
 信息:
@@ -19,21 +19,22 @@
 </span>
 
 <script type="text/javascript">
-    var message = document.getElementById('text').value;
-    const eventSource = new EventSource(
-        `/ds/stream?model='deepseek-r1:1.5b'&message=${message}`
-    );
+    function sendToServer() {
+        var message = document.getElementById('text').value;
+        const eventSource = new EventSource(
+            `http://localhost:8080/stream?model='deepseek-r1:1.5b'&message=${message}`
+        );
 
-   eventSource.onmessage = (event) => {
-    let response = event.data;
-    console.log(response);
-    if (response == "end") {
-        return;
-    }
+       eventSource.onmessage = (event) => {
+        let response = event.data;
+        console.log(response);
+        if (response == "end") {
+            return;
+        }
 
-    response = JSON.parse(response).content;
-    document.getElementById('message').innerHTML += response + '<br />';
-
+        response = JSON.parse(response).content;
+        document.getElementById('message').innerHTML += response + '<br />';
+        }
    }
 
 </script>
